Fixes Code section

--- a/C/C_style-guide.mkd
+++ b/C/C_style-guide.mkd
@@ -54,6 +54,7 @@ typedef struct point {
 void print_test(int, int);
 
 ////////////////////////////////////////////////////////////////////////////////
+// Code
 
 int main(void) {
 	int *y, z;
