--- a/C/C_style-guide.mkd
+++ b/C/C_style-guide.mkd
@@ -7,56 +7,30 @@ TL;DR
 Below is a simple program that demonstrates my C style (for more detail, read the rest of the guide):
 
 ```c
-////////////////////////////////////////////////////////////////////////////////
-// Comments
-
 // This is a simple C program that demonstrates my preferred C coding style.
-
-////////////////////////////////////////////////////////////////////////////////
-// Global Libraries
 
 #include <stdio.h>
 #include <math.h>
 
-////////////////////////////////////////////////////////////////////////////////
-// Global Symbolic Constants
-
 #define HRNG 1834 // Human Random Number Generator value
-
-////////////////////////////////////////////////////////////////////////////////
-// Global Macros
-
 #define PrintParameterValue(x, y, z) printf("%d + %d + %d = [%d]\n", (x), (y), (z), (x) + (y) + (z))
-
-////////////////////////////////////////////////////////////////////////////////
-// Global Types
 
 typedef enum boolean {
 	FALSE,
 	TRUE
 } Boolean;
 
-////////////////////////////////////////////////////////////////////////////////
-// Global Structs
-
 typedef struct point {
 	int axis_x;
 	int axis_y;
 } TwoDimension;
 
-////////////////////////////////////////////////////////////////////////////////
-// Global Functions
-
 // Prints out the expression & the value of the expression:
 //// 1) Uses printf()
-//
 //// 2) Uses PrintParamenterValue().
 void print_test(int, int);
 
-////////////////////////////////////////////////////////////////////////////////
-// Code
-
-int main(void) {
+main() {
 	int *y, z;
 
 	// Sets y & z {{{
@@ -154,7 +128,7 @@ Variables & Arrays
 *	Variables & arrays of the same type should be declared on the same line--permitted that they and any of their respective comments fit inside 80 spaces. If they don't, they should be split over multiple lines so that they do, e.g.
 
 	```c
-	int main(void) {
+	main() {
 		int alpha, beta, gamma, delta, epsilon; // Greek 'A', 'B', 'G', 'D', 'E', 
 		int zeta, eta;                          // 'Z', 'E'
 	```
@@ -176,6 +150,15 @@ Variables & Arrays
 	double_array[1][1] = 1.1;
 	```
 
+Symbolic Constants
+------------------
+
+*	Symbolic constant names follow the same rules used for variable names, with the exceptions that every letter is capitalized, e.g.
+
+	```c
+	#define STRING_MAX 1000
+	```
+
 Macros
 ------
 
@@ -191,6 +174,13 @@ Macros
 
 Functions
 ---------
+
+*	Functions should follow the same naming rules as variables, e.g.
+
+	```c
+	// Adds two floats together.
+	float add_float(float, float);
+	```
 
 *	All function aguments are tightly bound to the function name. This way, complex expressions containing functions with return values are easier to parse. Moreover, you get fewer style errors due to forgotten spaces, e.g.
 
@@ -210,15 +200,6 @@ Functions
 	```c
 	printf("%d\n", pow(2, 3));
 	```
-
-*	Per K & R, empty lists in function declarations should be made explicit with *void*, e.g.:
-
-	```c
-	int main(void) {
-		int x = 1337;
-
-		return 0;
-	}
 
 Control Functions
 -----------------
@@ -270,18 +251,11 @@ Control Functions
 Comments
 --------
 
-*	Sections are demarcated by 80 `/`'s, followed by a commented section name and a blank line. E.G.:
+*	A comment section should always be affixed to the head of a file. This way, a change history can be easily catalogued, and so on.
 
-	```C
-	////////////////////////////////////////////////////////////////////////////////
-	// Comments
+*	Do not exceed more than 80 characters per line. Most screens can handle that length, but any longer, and you start getting really obnoxious pseudo-linebreaks.
 
-	// This is the first item in this section
-	```
-
-*	I make an effort to not exceed 80 characters per line (this is not always possible).
-
-*	Comments in the comments section should be separate by at least one line break. If they are sufficiently decoupled, two. Both should be commented out with a `//`.
+*	Separate comments by at least one line break. If they are sufficiently decoupled, two. Both should be commented out with a `//`.
 
 	```C
 	////////////////////////////////////////////////////////////////////////////////
@@ -296,7 +270,21 @@ Comments
 *	Comments that only refer to one line should be placed to the right of the code, and commented out with `//`. E.G.:
 
 	```c
-	free(s); // Always free memory
+	free(string); // Always free memory
+	```
+
+*	For overlong, single line comments, break the comment into multiple lines so that they fit within the 80 spaces. Each line after the first gets indented same as the first, then filled with spaces so that the `//` line up. E.G.
+
+	```c
+	////////////////////////////////////////////////////////////////////////////////
+	main() {
+		int e; // Element
+
+		for (e = 12; e < 24; ++e) { // 1 tabs
+			printf("e = [%d]\n"); // 2 tabs: nothing special about this comment,
+			                      // 2 tabs + 23 spaces: special because it lines up
+			printf("e != [%d]\n", e - 3); // 2 tabs
+		} // 1 tabs
 	```
 
 *	Comments that refer to a whole block of code go above the code block.
@@ -319,43 +307,29 @@ Comments
 	// }}}
 	```
 
-*	Functions should follow the same naming rules as variables, e.g.
-
-	```c
-	// Adds two floats together.
-	float add_float(float, float);
-	```
-
-*	For overlong, single line comments, break the comment into multiple lines so that they fit within the 80 spaces. Each line after the first gets indented same as the first, then filled with spaces so that the `//` line up. E.G.
-
-	```c
-	////////////////////////////////////////////////////////////////////////////////
-	int main (void) {
-		int e; // Element
-
-		for (e = 12; e < 24; ++e) { // 1 tabs
-			printf("e = [%d]\n"); // 2 tabs: nothing special about this comment,
-			                      // 2 tabs + 23 spaces: special because it lines up
-			printf("e != [%d]\n", e - 3); // 2 tabs
-		} // 1 tabs
-	```
-
-	(N.B. The above is a great demonstation of why you should have your editor write out tabs as 4 spaces instead of tab.)
-
 *	In general, these days I try to write as little commentary as possible. For one, it's a huge PITA. Second, I've come to believe that it's better to write code that is clear than code that is well documented. This especially shows in my change of heart with regards to naming.
 
 Organization
 ------------
 
-*	C gives a programmer a lot of flexibility with regards to organization. Personally, I prefer breaking a program into a comments section, a global section, and a code section, i.e.
+*	C's top-to-bottom compilation encourages an organic programming style, so strict programming organization gets in the way of good programming. That said, as programs grow, they should be library-fied. As such, for potentially large projects, it is good pratice to put header-y code at the top of the file. I've found the following header organization is best, as 
 	1.	Comments
-	2.	Global Libraries
-	3.	Global Symbolic Constants
-	4.	Global Macros
-	5.	Global Types
-	6.	Global Structs
-	7.	Global Variables
-	8.	Global Functions
-	9.	Code
+	2.	`#include`'s
+	3.	`#define`'s
+	5.	Types
+	6.	Structs
+	8.	Function prototypes
 
-	Considering that C compiles top-to-bottom, the code section entails a lot of flexibility. Refer to the *TL;DR* for an example of an external variable that is declared after `main()` (that way, it is less vulnerable to certain bugs).
+	This makes it much easier to library-fy an unwieldy source file, while also allowing pre-processing to do its magic without silly bugs. Further, in order to encourage clean code, I decided to stop labeling sections. The idea is that the sections should scream what they are, so labeling is not necessary. 
+
+	That said, for small projects that will never exceed a couple of hundred of lines of code, I strongly believe that the natural scoping and typing issues of the program should dictate its organization. This makes it much, much easier to program, e.g.
+
+	```c
+	#include <stdlib.h>
+	typedef enum bool { FALSE, TRUE } Bool;
+	Bool random_truth_value_generator(void);
+	Bool random_truth_value_generator() {
+		srandomdev();
+		return (random() % 10 < 5) ? TRUE : FALSE;
+	}
+	```
