--- a/C/C_style-guide.mkd
+++ b/C/C_style-guide.mkd
@@ -356,7 +356,7 @@ Organization
 
 		return 0;
 	}
-	// }}}
+	// Main }}}
 
 	// random_truth_value_generator() {{{
 	#include <stdlib.h>
@@ -365,5 +365,5 @@ Organization
 		srandomdev();
 		return (random() % 2 == 1) ? TRUE : FALSE;
 	}
-	// }}}
+	// random_truth_value_generator() }}}
 	```
